; ModuleID = '/home/carl/AnghaBench/zfs/module/nvpair/extr_fnvpair.c_fnvlist_num_pairs.c'
source_filename = "/home/carl/AnghaBench/zfs/module/nvpair/extr_fnvpair.c_fnvlist_num_pairs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @fnvlist_num_pairs(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @nvlist_next_nvpair(i32* %5, i32* null)
  store i32* %6, i32** %4, align 8
  br label %7

7:                                                ; preds = %13, %1
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %7
  %11 = load i64, i64* %3, align 8
  %12 = add i64 %11, 1
  store i64 %12, i64* %3, align 8
  br label %13

13:                                               ; preds = %10
  %14 = load i32*, i32** %2, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32* @nvlist_next_nvpair(i32* %14, i32* %15)
  store i32* %16, i32** %4, align 8
  br label %7

17:                                               ; preds = %7
  %18 = load i64, i64* %3, align 8
  ret i64 %18
}

declare dso_local i32* @nvlist_next_nvpair(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
